--- a/www/css/adicional.css
+++ b/www/css/adicional.css
@@ -1,29 +1,30 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-	background-color: #DCDCDC;
+	background-color: #F3F3F3;
 	color: #262626;
 }
-strong {
+strong, label {
 	color: #00819E;
-	font-weight: normal; 
 }
 h1 {
 	color: #006A83;
+	font-family: 'Bitter', serif;
+	text-transform: lowercase;
 } 
 a { 
 	color: #00A9C8;
 }
 a:hover {
-	color: #005B6F;
+	color: #FFFFFF;
 }
 .navbar {
-	background-color: #F1F1F1;
+	background-color: #FAFAFA;
 	color: #434343;
 }
-.navbar-nav > li:hover {
-	background-color: #BCF0F4;
-	color: #006A83;
+.navbar-nav > li:hover, .navbar-nav > a:hover {
+	background-color: #5DCFEA;
+	color: #FFFFFF;
 }
 .active, .sr-only {
 	background-color: #DCDCDC;
