--- a/www/css/adicional.css
+++ b/www/css/adicional.css
@@ -46,3 +46,11 @@ a:hover {
    display: none;
    z-index: 1000;
 }
+#map {
+   width: 100%;
+   height: 400px;
+}
+#map img {
+   max-width: none;
+}
+
