--- a/www/css/adicional.css
+++ b/www/css/adicional.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-	background-color: #F3F3F3;
+	background-color: #FFFFFF;
 	color: #262626;
 }
 strong, label {
