--- a/www/css/adicional.css
+++ b/www/css/adicional.css
@@ -15,9 +15,6 @@ h1 {
 a { 
 	color: #00A9C8;
 }
-a:hover {
-	color: #FFFFFF;
-}
 .navbar {
 	background-color: #FAFAFA;
 	color: #434343;
@@ -53,4 +50,7 @@ a:hover {
 #map img {
    max-width: none;
 }
-
+img.math {
+   display: block;
+   margin: 40px auto;
+}
